test/patterns_bak/s0228_summary_ranges/hafis/starchat/jml_syntax_checking.txt
./test/s0228_summary_ranges/hafis/starchat/Solution.java:15: error: bad operand types for binary operator '<='
//@ requires(\forall int i; 0 <= i < nums.length; ((nums <= 2147483647) && (nums >= -2147483648)));
                                                         ^
  first type:  int[]
  second type: int
./test/s0228_summary_ranges/hafis/starchat/Solution.java:15: error: bad operand types for binary operator '>='
//@ requires(\forall int i; 0 <= i < nums.length; ((nums <= 2147483647) && (nums >= -2147483648)));
                                                                                 ^
  first type:  int[]
  second type: int
2 errors
